kubernetes/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  ports:
  - name: http
    port: 9090
    targetPort: http
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.2.134 # TODO: confirm available IP
  type: LoadBalancer
