kubernetes/prometheus/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: prometheus
  annotations:
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`prometheus.tehmatt.com`)
    kind: Rule
    services:
    - name: prometheus
      port: 9090
      passHostHeader: false
    middlewares:
    - name: default-headers
      namespace: prometheus
  tls:
    secretName: tehmatt-tls
